--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,46 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+            <li>The head element contains information about the webpage.</li>
+            <li>The body element represents the visible content shown to the user.</li>
+            <li>The header element appears at the top of the page and usually contains a navigation menu and/or introductory content.</li>
+            <li>When using headings, it is important that we use heading tags in order from 1 to 6. In addition, the biggest heading, h1 should only appear once on each page.</li>
+            <li>The img element has the 'src' attribute defines the location, or source, of the image file and the 'alt' attrubute contains a text string that describes the appearance and functionality of the image.</li>
+            <li>The footer element appears at the bottom of the page and usually contains the author, copyright, contact, sitemap, and navigation.</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>
+            Enter your CSS notes here
+          </li>
+        </ul> 
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git config --global user.name "[name]": set a name that is identifiable for credit when review version history</li>
+          <li>git config --global user.email "[valid-email]": set an email address that will be associated with each history marker</li>
+          <li>git init: initialize an existing directory as a Git repository</li>
+          <li>git clone [url]: retrieve and entire repository from a hosed location via URL</li>
+          <li>git status: chechs what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git pull: fetch and merge any commts from the tracking remote branch</li>
+          <li>git commit -m "[descriptive message]": commit your staged content as a new commit snapshot</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>
+            Enter your JavaScript notes here
+          </li>
+        </ul> 
+      </section>
     </main>
 
     <footer>
